--- a/.env
+++ b/.env
@@ -17,3 +17,12 @@
 APP_ENV=dev
 APP_SECRET=ff3f85f239a8a7fb753d2820c42e0fa6
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
+DATABASE_URL="mysql://bikeshop:bikeshop@localhost:3306/bikeshop?serverVersion=8.0&charset=utf8"
+###< doctrine/doctrine-bundle ###
